[tool.poetry]
name = "st-datatables"
version = "0.0.1"
description = "A streamlit component to render pandas DataFrames as jQuery DataTables."
authors = ["ljnsn <ljnsn@users.noreply.github.com>"]
repository = "https://github.com/ljnsn/st-datatables"
keywords = [ "streamlit", "streamlit-component", "datatables", "pandas" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = "MIT"
readme = "README.md"
packages = [{include = "st_datatables"}]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.89.0"
pandas = "^1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
